Release 0.3 (dev)
-----------------


Release 0.2
-----------

* python 3.3, 3.4 compatibility
* add ability to customize the upload template
* disable button after click to prevent double click
* improved automatic button's label creation
* it's not anymore mandatory to return a HttpResponse


Release 0.1
-----------

* Initial release