@@ -1,5 +1,6 @@
 Release 0.3 (dev)
 -----------------
+* add ability to order buttons
 
 
 Release 0.2
